--- a/client/src/pages/About/about.css
+++ b/client/src/pages/About/about.css
@@ -65,6 +65,7 @@ ul {
   text-align: center;
   color: rgb(90, 90, 90);
   font-size: 20px;
+  text-decoration: underline;
 }
 
 .to-home:hover {
@@ -95,4 +96,5 @@ ul {
 .members li a {
   color: rgb(90, 90, 90);
   font-size: 20px;
+  text-decoration: underline;
 }
